tools/yacc/y.output

state 0
	$accept: .top $end 
	sections: .    (2)

	.  reduce 2 (src line 223)

	sections  goto 2
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  section.    (1)
	sections:  section.assertion 
	sections:  section.shard 
	sections:  section.pshard 
	sections:  section.zone 

	assertionType  shift 11
	shardType  shift 12
	pshardType  shift 13
	zoneType  shift 14
	.  reduce 1 (src line 218)

	zone  goto 6
	zoneBody  goto 10
	shard  goto 4
	shardBody  goto 8
	pshard  goto 5
	pshardBody  goto 9
	assertion  goto 3
	assertionBody  goto 7

state 3
	sections:  sections assertion.    (3)

	.  reduce 3 (src line 227)


state 4
	sections:  sections shard.    (4)

	.  reduce 4 (src line 231)


state 5
	sections:  sections pshard.    (5)

	.  reduce 5 (src line 235)


state 6
	sections:  sections zone.    (6)

	.  reduce 6 (src line 239)


state 7
	assertion:  assertionBody.    (35)
	assertion:  assertionBody.annotation 

	lParenthesis  shift 16
	.  reduce 35 (src line 391)

	annotation  goto 15

state 8
	shard:  shardBody.    (14)
	shard:  shardBody.annotation 

	lParenthesis  shift 16
	.  reduce 14 (src line 277)

	annotation  goto 17

state 9
	pshard:  pshardBody.    (24)
	pshard:  pshardBody.annotation 

	lParenthesis  shift 16
	.  reduce 24 (src line 329)

	annotation  goto 18

state 10
	zone:  zoneBody.    (7)
	zone:  zoneBody.annotation 

	lParenthesis  shift 16
	.  reduce 7 (src line 244)

	annotation  goto 19

state 11
	assertionBody:  assertionType.ID lBracket objects rBracket 
	assertionBody:  assertionType.ID ID ID lBracket objects rBracket 

	ID  shift 20
	.  error


state 12
	shardBody:  shardType.ID ID shardRange lBracket shardContent rBracket 
	shardBody:  shardType.shardRange lBracket shardContent rBracket 

	ID  shift 21
	rangeBegin  shift 23
	.  error

	shardRange  goto 22

state 13
	pshardBody:  pshardType.ID ID shardRange pshardContent 
	pshardBody:  pshardType.shardRange pshardContent 

	ID  shift 24
	rangeBegin  shift 23
	.  error

	shardRange  goto 25

state 14
	zoneBody:  zoneType.ID ID lBracket zoneContent rBracket 

	ID  shift 26
	.  error


state 15
	assertion:  assertionBody annotation.    (36)

	.  reduce 36 (src line 392)


state 16
	annotation:  lParenthesis.annotationBody rParenthesis 

	sigType  shift 30
	.  error

	annotationBody  goto 27
	signature  goto 28
	signatureMeta  goto 29

state 17
	shard:  shardBody annotation.    (15)

	.  reduce 15 (src line 278)


state 18
	pshard:  pshardBody annotation.    (25)

	.  reduce 25 (src line 330)


state 19
	zone:  zoneBody annotation.    (8)

	.  reduce 8 (src line 245)


state 20
	assertionBody:  assertionType ID.lBracket objects rBracket 
	assertionBody:  assertionType ID.ID ID lBracket objects rBracket 

	ID  shift 32
	lBracket  shift 31
	.  error


state 21
	shardBody:  shardType ID.ID shardRange lBracket shardContent rBracket 
	shardRange:  ID.ID 
	shardRange:  ID.rangeEnd 

	ID  shift 33
	rangeEnd  shift 34
	.  error


state 22
	shardBody:  shardType shardRange.lBracket shardContent rBracket 

	lBracket  shift 35
	.  error


state 23
	shardRange:  rangeBegin.ID 
	shardRange:  rangeBegin.rangeEnd 

	ID  shift 36
	rangeEnd  shift 37
	.  error


state 24
	shardRange:  ID.ID 
	shardRange:  ID.rangeEnd 
	pshardBody:  pshardType ID.ID shardRange pshardContent 

	ID  shift 38
	rangeEnd  shift 34
	.  error


state 25
	pshardBody:  pshardType shardRange.pshardContent 

	bloomFilterType  shift 41
	.  error

	pshardContent  goto 39
	bloomFilter  goto 40

state 26
	zoneBody:  zoneType ID.ID lBracket zoneContent rBracket 

	ID  shift 42
	.  error


state 27
	annotation:  lParenthesis annotationBody.rParenthesis 
	annotationBody:  annotationBody.signature 

	sigType  shift 30
	rParenthesis  shift 43
	.  error

	signature  goto 44
	signatureMeta  goto 29

state 28
	annotationBody:  signature.    (119)

	.  reduce 119 (src line 798)


state 29
	signature:  signatureMeta.    (121)
	signature:  signatureMeta.ID 

	ID  shift 45
	.  reduce 121 (src line 807)


state 30
	signatureMeta:  sigType.ed25519Type rains ID ID ID 

	ed25519Type  shift 46
	.  error


state 31
	assertionBody:  assertionType ID lBracket.objects rBracket 

	nameType  shift 74
	ip4Type  shift 76
	ip6Type  shift 75
	redirType  shift 77
	delegType  shift 78
	namesetType  shift 79
	certType  shift 80
	srvType  shift 81
	regrType  shift 82
	regtType  shift 83
	infraType  shift 84
	extraType  shift 85
	nextType  shift 86
	.  error

	objects  goto 47
	name  goto 48
	ip4  goto 50
	ip6  goto 49
	redir  goto 51
	deleg  goto 52
	nameset  goto 53
	cert  goto 54
	srv  goto 55
	regr  goto 56
	regt  goto 57
	infra  goto 58
	extra  goto 59
	next  goto 60
	nameBody  goto 61
	ip4Body  goto 63
	ip6Body  goto 62
	redirBody  goto 64
	delegBody  goto 65
	namesetBody  goto 66
	certBody  goto 67
	srvBody  goto 68
	regrBody  goto 69
	regtBody  goto 70
	infraBody  goto 71
	extraBody  goto 72
	nextBody  goto 73

state 32
	assertionBody:  assertionType ID ID.ID lBracket objects rBracket 

	ID  shift 87
	.  error


state 33
	shardBody:  shardType ID ID.shardRange lBracket shardContent rBracket 
	shardRange:  ID ID.    (18)

	ID  shift 89
	rangeBegin  shift 23
	.  reduce 18 (src line 303)

	shardRange  goto 88

state 34
	shardRange:  ID rangeEnd.    (20)

	.  reduce 20 (src line 311)


state 35
	shardBody:  shardType shardRange lBracket.shardContent rBracket 
	shardContent: .    (22)

	.  reduce 22 (src line 320)

	shardContent  goto 90

state 36
	shardRange:  rangeBegin ID.    (19)

	.  reduce 19 (src line 307)


state 37
	shardRange:  rangeBegin rangeEnd.    (21)

	.  reduce 21 (src line 315)


state 38
	shardRange:  ID ID.    (18)
	pshardBody:  pshardType ID ID.shardRange pshardContent 

	ID  shift 89
	rangeBegin  shift 23
	.  reduce 18 (src line 303)

	shardRange  goto 91

state 39
	pshardBody:  pshardType shardRange pshardContent.    (27)

	.  reduce 27 (src line 346)


state 40
	pshardContent:  bloomFilter.    (28)

	.  reduce 28 (src line 355)


state 41
	bloomFilter:  bloomFilterType.lBracket hashTypes rBracket ID bfOpMode ID 

	lBracket  shift 92
	.  error


state 42
	zoneBody:  zoneType ID ID.lBracket zoneContent rBracket 

	lBracket  shift 93
	.  error


state 43
	annotation:  lParenthesis annotationBody rParenthesis.    (118)

	.  reduce 118 (src line 793)


state 44
	annotationBody:  annotationBody signature.    (120)

	.  reduce 120 (src line 802)


state 45
	signature:  signatureMeta ID.    (122)

	.  reduce 122 (src line 808)


state 46
	signatureMeta:  sigType ed25519Type.rains ID ID ID 

	rains  shift 94
	.  error


state 47
	assertionBody:  assertionType ID lBracket objects.rBracket 

	rBracket  shift 95
	.  error


state 48
	objects:  name.    (39)
	name:  name.nameBody 

	nameType  shift 74
	.  reduce 39 (src line 415)

	nameBody  goto 96

state 49
	objects:  ip6.    (40)
	ip6:  ip6.ip6Body 

	ip6Type  shift 75
	.  reduce 40 (src line 416)

	ip6Body  goto 97

state 50
	objects:  ip4.    (41)
	ip4:  ip4.ip4Body 

	ip4Type  shift 76
	.  reduce 41 (src line 417)

	ip4Body  goto 98

state 51
	objects:  redir.    (42)
	redir:  redir.redirBody 

	redirType  shift 77
	.  reduce 42 (src line 418)

	redirBody  goto 99

state 52
	objects:  deleg.    (43)
	deleg:  deleg.delegBody 

	delegType  shift 78
	.  reduce 43 (src line 419)

	delegBody  goto 100

state 53
	objects:  nameset.    (44)
	nameset:  nameset.namesetBody 

	namesetType  shift 79
	.  reduce 44 (src line 420)

	namesetBody  goto 101

state 54
	objects:  cert.    (45)
	cert:  cert.certBody 

	certType  shift 80
	.  reduce 45 (src line 421)

	certBody  goto 102

state 55
	objects:  srv.    (46)
	srv:  srv.srvBody 

	srvType  shift 81
	.  reduce 46 (src line 422)

	srvBody  goto 103

state 56
	objects:  regr.    (47)
	regr:  regr.regrBody 

	regrType  shift 82
	.  reduce 47 (src line 423)

	regrBody  goto 104

state 57
	objects:  regt.    (48)
	regt:  regt.regtBody 

	regtType  shift 83
	.  reduce 48 (src line 424)

	regtBody  goto 105

state 58
	objects:  infra.    (49)
	infra:  infra.infraBody 

	infraType  shift 84
	.  reduce 49 (src line 425)

	infraBody  goto 106

state 59
	objects:  extra.    (50)
	extra:  extra.extraBody 

	extraType  shift 85
	.  reduce 50 (src line 426)

	extraBody  goto 107

state 60
	objects:  next.    (51)
	next:  next.nextBody 

	nextType  shift 86
	.  reduce 51 (src line 427)

	nextBody  goto 108

state 61
	name:  nameBody.    (52)

	.  reduce 52 (src line 429)


state 62
	ip6:  ip6Body.    (70)

	.  reduce 70 (src line 511)


state 63
	ip4:  ip4Body.    (73)

	.  reduce 73 (src line 528)


state 64
	redir:  redirBody.    (76)

	.  reduce 76 (src line 545)


state 65
	deleg:  delegBody.    (79)

	.  reduce 79 (src line 562)


state 66
	nameset:  namesetBody.    (82)

	.  reduce 82 (src line 583)


state 67
	cert:  certBody.    (85)

	.  reduce 85 (src line 600)


state 68
	srv:  srvBody.    (88)

	.  reduce 88 (src line 621)


state 69
	regr:  regrBody.    (91)

	.  reduce 91 (src line 642)


state 70
	regt:  regtBody.    (94)

	.  reduce 94 (src line 659)


state 71
	infra:  infraBody.    (97)

	.  reduce 97 (src line 676)


state 72
	extra:  extraBody.    (100)

	.  reduce 100 (src line 697)


state 73
	next:  nextBody.    (103)

	.  reduce 103 (src line 719)


state 74
	nameBody:  nameType.ID lBracket oTypes rBracket 

	ID  shift 109
	.  error


state 75
	ip6Body:  ip6Type.ID 

	ID  shift 110
	.  error


state 76
	ip4Body:  ip4Type.ID 

	ID  shift 111
	.  error


state 77
	redirBody:  redirType.ID 

	ID  shift 112
	.  error


state 78
	delegBody:  delegType.ed25519Type ID ID 

	ed25519Type  shift 113
	.  error


state 79
	namesetBody:  namesetType.freeText 

	ID  shift 115
	.  error

	freeText  goto 114

state 80
	certBody:  certType.protocolType certUsage hashType ID 

	unspecified  shift 117
	tls  shift 118
	.  error

	protocolType  goto 116

state 81
	srvBody:  srvType.ID ID ID 

	ID  shift 119
	.  error


state 82
	regrBody:  regrType.freeText 

	ID  shift 115
	.  error

	freeText  goto 120

state 83
	regtBody:  regtType.freeText 

	ID  shift 115
	.  error

	freeText  goto 121

state 84
	infraBody:  infraType.ed25519Type ID ID 

	ed25519Type  shift 122
	.  error


state 85
	extraBody:  extraType.ed25519Type ID ID 

	ed25519Type  shift 123
	.  error


state 86
	nextBody:  nextType.ed25519Type ID ID ID ID 

	ed25519Type  shift 124
	.  error


state 87
	assertionBody:  assertionType ID ID ID.lBracket objects rBracket 

	lBracket  shift 125
	.  error


state 88
	shardBody:  shardType ID ID shardRange.lBracket shardContent rBracket 

	lBracket  shift 126
	.  error


state 89
	shardRange:  ID.ID 
	shardRange:  ID.rangeEnd 

	ID  shift 127
	rangeEnd  shift 34
	.  error


state 90
	shardBody:  shardType shardRange lBracket shardContent.rBracket 
	shardContent:  shardContent.assertion 

	assertionType  shift 11
	rBracket  shift 128
	.  error

	assertion  goto 129
	assertionBody  goto 7

state 91
	pshardBody:  pshardType ID ID shardRange.pshardContent 

	bloomFilterType  shift 41
	.  error

	pshardContent  goto 130
	bloomFilter  goto 40

state 92
	bloomFilter:  bloomFilterType lBracket.hashTypes rBracket ID bfOpMode ID 

	noHash  shift 133
	sha256  shift 134
	sha384  shift 135
	sha512  shift 136
	fnv64  shift 137
	murmur364  shift 138
	.  error

	hashTypes  goto 131
	hashType  goto 132

state 93
	zoneBody:  zoneType ID ID lBracket.zoneContent rBracket 
	zoneContent: .    (10)

	.  reduce 10 (src line 260)

	zoneContent  goto 139

state 94
	signatureMeta:  sigType ed25519Type rains.ID ID ID 

	ID  shift 140
	.  error


state 95
	assertionBody:  assertionType ID lBracket objects rBracket.    (37)

	.  reduce 37 (src line 398)


state 96
	name:  name nameBody.    (53)

	.  reduce 53 (src line 433)


state 97
	ip6:  ip6 ip6Body.    (71)

	.  reduce 71 (src line 515)


state 98
	ip4:  ip4 ip4Body.    (74)

	.  reduce 74 (src line 532)


state 99
	redir:  redir redirBody.    (77)

	.  reduce 77 (src line 549)


state 100
	deleg:  deleg delegBody.    (80)

	.  reduce 80 (src line 566)


state 101
	nameset:  nameset namesetBody.    (83)

	.  reduce 83 (src line 587)


state 102
	cert:  cert certBody.    (86)

	.  reduce 86 (src line 604)


state 103
	srv:  srv srvBody.    (89)

	.  reduce 89 (src line 625)


state 104
	regr:  regr regrBody.    (92)

	.  reduce 92 (src line 646)


state 105
	regt:  regt regtBody.    (95)

	.  reduce 95 (src line 663)


state 106
	infra:  infra infraBody.    (98)

	.  reduce 98 (src line 680)


state 107
	extra:  extra extraBody.    (101)

	.  reduce 101 (src line 701)


state 108
	next:  next nextBody.    (104)

	.  reduce 104 (src line 723)


state 109
	nameBody:  nameType ID.lBracket oTypes rBracket 

	lBracket  shift 141
	.  error


state 110
	ip6Body:  ip6Type ID.    (72)

	.  reduce 72 (src line 520)


state 111
	ip4Body:  ip4Type ID.    (75)

	.  reduce 75 (src line 537)


state 112
	redirBody:  redirType ID.    (78)

	.  reduce 78 (src line 554)


state 113
	delegBody:  delegType ed25519Type.ID ID 

	ID  shift 142
	.  error


state 114
	namesetBody:  namesetType freeText.    (84)
	freeText:  freeText.ID 

	ID  shift 143
	.  reduce 84 (src line 592)


state 115
	freeText:  ID.    (116)

	.  reduce 116 (src line 787)


state 116
	certBody:  certType protocolType.certUsage hashType ID 

	trustAnchor  shift 145
	endEntity  shift 146
	.  error

	certUsage  goto 144

state 117
	protocolType:  unspecified.    (106)

	.  reduce 106 (src line 744)


state 118
	protocolType:  tls.    (107)

	.  reduce 107 (src line 748)


state 119
	srvBody:  srvType ID.ID ID 

	ID  shift 147
	.  error


state 120
	regrBody:  regrType freeText.    (93)
	freeText:  freeText.ID 

	ID  shift 143
	.  reduce 93 (src line 651)


state 121
	regtBody:  regtType freeText.    (96)
	freeText:  freeText.ID 

	ID  shift 143
	.  reduce 96 (src line 668)


state 122
	infraBody:  infraType ed25519Type.ID ID 

	ID  shift 148
	.  error


state 123
	extraBody:  extraType ed25519Type.ID ID 

	ID  shift 149
	.  error


state 124
	nextBody:  nextType ed25519Type.ID ID ID ID 

	ID  shift 150
	.  error


state 125
	assertionBody:  assertionType ID ID ID lBracket.objects rBracket 

	nameType  shift 74
	ip4Type  shift 76
	ip6Type  shift 75
	redirType  shift 77
	delegType  shift 78
	namesetType  shift 79
	certType  shift 80
	srvType  shift 81
	regrType  shift 82
	regtType  shift 83
	infraType  shift 84
	extraType  shift 85
	nextType  shift 86
	.  error

	objects  goto 151
	name  goto 48
	ip4  goto 50
	ip6  goto 49
	redir  goto 51
	deleg  goto 52
	nameset  goto 53
	cert  goto 54
	srv  goto 55
	regr  goto 56
	regt  goto 57
	infra  goto 58
	extra  goto 59
	next  goto 60
	nameBody  goto 61
	ip4Body  goto 63
	ip6Body  goto 62
	redirBody  goto 64
	delegBody  goto 65
	namesetBody  goto 66
	certBody  goto 67
	srvBody  goto 68
	regrBody  goto 69
	regtBody  goto 70
	infraBody  goto 71
	extraBody  goto 72
	nextBody  goto 73

state 126
	shardBody:  shardType ID ID shardRange lBracket.shardContent rBracket 
	shardContent: .    (22)

	.  reduce 22 (src line 320)

	shardContent  goto 152

state 127
	shardRange:  ID ID.    (18)

	.  reduce 18 (src line 303)


state 128
	shardBody:  shardType shardRange lBracket shardContent rBracket.    (17)

	.  reduce 17 (src line 294)


state 129
	shardContent:  shardContent assertion.    (23)

	.  reduce 23 (src line 324)


state 130
	pshardBody:  pshardType ID ID shardRange pshardContent.    (26)

	.  reduce 26 (src line 336)


state 131
	bloomFilter:  bloomFilterType lBracket hashTypes.rBracket ID bfOpMode ID 
	hashTypes:  hashTypes.hashType 

	noHash  shift 133
	sha256  shift 134
	sha384  shift 135
	sha512  shift 136
	fnv64  shift 137
	murmur364  shift 138
	rBracket  shift 153
	.  error

	hashType  goto 154

state 132
	hashTypes:  hashType.    (30)

	.  reduce 30 (src line 369)


state 133
	hashType:  noHash.    (110)

	.  reduce 110 (src line 762)


state 134
	hashType:  sha256.    (111)

	.  reduce 111 (src line 766)


state 135
	hashType:  sha384.    (112)

	.  reduce 112 (src line 770)


state 136
	hashType:  sha512.    (113)

	.  reduce 113 (src line 774)


state 137
	hashType:  fnv64.    (114)

	.  reduce 114 (src line 778)


state 138
	hashType:  murmur364.    (115)

	.  reduce 115 (src line 782)


state 139
	zoneBody:  zoneType ID ID lBracket zoneContent.rBracket 
	zoneContent:  zoneContent.assertion 
	zoneContent:  zoneContent.shard 
	zoneContent:  zoneContent.pshard 

	assertionType  shift 11
	shardType  shift 12
	pshardType  shift 13
	rBracket  shift 155
	.  error

	shard  goto 157
	shardBody  goto 8
	pshard  goto 158
	pshardBody  goto 9
	assertion  goto 156
	assertionBody  goto 7

state 140
	signatureMeta:  sigType ed25519Type rains ID.ID ID 

	ID  shift 159
	.  error


state 141
	nameBody:  nameType ID lBracket.oTypes rBracket 

	nameType  shift 162
	ip4Type  shift 163
	ip6Type  shift 164
	redirType  shift 165
	delegType  shift 166
	namesetType  shift 167
	certType  shift 168
	srvType  shift 169
	regrType  shift 170
	regtType  shift 171
	infraType  shift 172
	extraType  shift 173
	nextType  shift 174
	.  error

	oTypes  goto 160
	oType  goto 161

state 142
	delegBody:  delegType ed25519Type ID.ID 

	ID  shift 175
	.  error


state 143
	freeText:  freeText ID.    (117)

	.  reduce 117 (src line 788)


state 144
	certBody:  certType protocolType certUsage.hashType ID 

	noHash  shift 133
	sha256  shift 134
	sha384  shift 135
	sha512  shift 136
	fnv64  shift 137
	murmur364  shift 138
	.  error

	hashType  goto 176

state 145
	certUsage:  trustAnchor.    (108)

	.  reduce 108 (src line 753)


state 146
	certUsage:  endEntity.    (109)

	.  reduce 109 (src line 757)


state 147
	srvBody:  srvType ID ID.ID 

	ID  shift 177
	.  error


state 148
	infraBody:  infraType ed25519Type ID.ID 

	ID  shift 178
	.  error


state 149
	extraBody:  extraType ed25519Type ID.ID 

	ID  shift 179
	.  error


state 150
	nextBody:  nextType ed25519Type ID.ID ID ID 

	ID  shift 180
	.  error


state 151
	assertionBody:  assertionType ID ID ID lBracket objects.rBracket 

	rBracket  shift 181
	.  error


state 152
	shardBody:  shardType ID ID shardRange lBracket shardContent.rBracket 
	shardContent:  shardContent.assertion 

	assertionType  shift 11
	rBracket  shift 182
	.  error

	assertion  goto 129
	assertionBody  goto 7

state 153
	bloomFilter:  bloomFilterType lBracket hashTypes rBracket.ID bfOpMode ID 

	ID  shift 183
	.  error


state 154
	hashTypes:  hashTypes hashType.    (31)

	.  reduce 31 (src line 373)


state 155
	zoneBody:  zoneType ID ID lBracket zoneContent rBracket.    (9)

	.  reduce 9 (src line 251)


state 156
	zoneContent:  zoneContent assertion.    (11)

	.  reduce 11 (src line 264)


state 157
	zoneContent:  zoneContent shard.    (12)

	.  reduce 12 (src line 268)


state 158
	zoneContent:  zoneContent pshard.    (13)

	.  reduce 13 (src line 272)


state 159
	signatureMeta:  sigType ed25519Type rains ID ID.ID 

	ID  shift 184
	.  error


state 160
	nameBody:  nameType ID lBracket oTypes.rBracket 
	oTypes:  oTypes.oType 

	nameType  shift 162
	ip4Type  shift 163
	ip6Type  shift 164
	redirType  shift 165
	delegType  shift 166
	namesetType  shift 167
	certType  shift 168
	srvType  shift 169
	regrType  shift 170
	regtType  shift 171
	infraType  shift 172
	extraType  shift 173
	nextType  shift 174
	rBracket  shift 185
	.  error

	oType  goto 186

state 161
	oTypes:  oType.    (55)

	.  reduce 55 (src line 449)


state 162
	oType:  nameType.    (57)

	.  reduce 57 (src line 458)


state 163
	oType:  ip4Type.    (58)

	.  reduce 58 (src line 462)


state 164
	oType:  ip6Type.    (59)

	.  reduce 59 (src line 466)


state 165
	oType:  redirType.    (60)

	.  reduce 60 (src line 470)


state 166
	oType:  delegType.    (61)

	.  reduce 61 (src line 474)


state 167
	oType:  namesetType.    (62)

	.  reduce 62 (src line 478)


state 168
	oType:  certType.    (63)

	.  reduce 63 (src line 482)


state 169
	oType:  srvType.    (64)

	.  reduce 64 (src line 486)


state 170
	oType:  regrType.    (65)

	.  reduce 65 (src line 490)


state 171
	oType:  regtType.    (66)

	.  reduce 66 (src line 494)


state 172
	oType:  infraType.    (67)

	.  reduce 67 (src line 498)


state 173
	oType:  extraType.    (68)

	.  reduce 68 (src line 502)


state 174
	oType:  nextType.    (69)

	.  reduce 69 (src line 506)


state 175
	delegBody:  delegType ed25519Type ID ID.    (81)

	.  reduce 81 (src line 571)


state 176
	certBody:  certType protocolType certUsage hashType.ID 

	ID  shift 187
	.  error


state 177
	srvBody:  srvType ID ID ID.    (90)

	.  reduce 90 (src line 630)


state 178
	infraBody:  infraType ed25519Type ID ID.    (99)

	.  reduce 99 (src line 685)


state 179
	extraBody:  extraType ed25519Type ID ID.    (102)

	.  reduce 102 (src line 706)


state 180
	nextBody:  nextType ed25519Type ID ID.ID ID 

	ID  shift 188
	.  error


state 181
	assertionBody:  assertionType ID ID ID lBracket objects rBracket.    (38)

	.  reduce 38 (src line 405)


state 182
	shardBody:  shardType ID ID shardRange lBracket shardContent rBracket.    (16)

	.  reduce 16 (src line 284)


state 183
	bloomFilter:  bloomFilterType lBracket hashTypes rBracket ID.bfOpMode ID 

	standard  shift 190
	km1  shift 191
	km2  shift 192
	.  error

	bfOpMode  goto 189

state 184
	signatureMeta:  sigType ed25519Type rains ID ID ID.    (123)

	.  reduce 123 (src line 818)


state 185
	nameBody:  nameType ID lBracket oTypes rBracket.    (54)

	.  reduce 54 (src line 438)


state 186
	oTypes:  oTypes oType.    (56)

	.  reduce 56 (src line 453)


state 187
	certBody:  certType protocolType certUsage hashType ID.    (87)

	.  reduce 87 (src line 609)


state 188
	nextBody:  nextType ed25519Type ID ID ID.ID 

	ID  shift 193
	.  error


state 189
	bloomFilter:  bloomFilterType lBracket hashTypes rBracket ID bfOpMode.ID 

	ID  shift 194
	.  error


state 190
	bfOpMode:  standard.    (32)

	.  reduce 32 (src line 378)


state 191
	bfOpMode:  km1.    (33)

	.  reduce 33 (src line 382)


state 192
	bfOpMode:  km2.    (34)

	.  reduce 34 (src line 386)


state 193
	nextBody:  nextType ed25519Type ID ID ID ID.    (105)

	.  reduce 105 (src line 728)


state 194
	bloomFilter:  bloomFilterType lBracket hashTypes rBracket ID bfOpMode ID.    (29)

	.  reduce 29 (src line 357)


44 terminals, 55 nonterminals
124 grammar rules, 195/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
104 working sets used
memory: parser 117/120000
51 extra closures
179 shift entries, 1 exceptions
86 goto entries
34 entries saved by goto default
Optimizer space used: output 236/120000
236 table entries, 0 zero
maximum spread: 44, maximum offset: 160
